# philip

./: .gitignore  .gitmodules  CMakeLists.txt
include/algorithms/: algorithms.hpp  allocate.hpp  allocator.hpp  arena.hpp  array.hpp  array_.hpp  array_dynamic.hpp  array_static.hpp  common.hpp  compiler.hpp  construct.hpp  deallocate.hpp  destruct.hpp  lexeme.hpp  opcode.hpp  operator.hpp  overload.hpp  parser.hpp  pointee.hpp  scanner.hpp  sequence.hpp  size.hpp  timer.hpp  token.hpp  vector.hpp  vm.hpp
include/philip/: common.hpp  philip.hpp
src/: CMakeLists.txt  algorithms.cpp  allocate.cpp  arena.cpp  array_.cpp  array_0.cpp  array_1.cpp  array_dynamic.cpp  array_static.cpp  construct.cpp  deallocate.cpp  destruct.cpp  lexeme.cpp  opcode.cpp  operator.cpp  overload.cpp  philip.cpp  pointee.cpp  reallocator.cpp
src/in/: project.hpp
src/priv/: project.hpp
tests/: test.hpp
tests/include/: test.hpp  testlib.hpp
tests/src/: CMakeLists.txt  test_allocator.cpp  test_arena.cpp  test_array.cpp  test_file_0.hpp  test_main.cpp  test_philip.cpp  test_pointee.cpp  test_sequence.cpp  test_vector.cpp  testlib.cpp
